# server/src/modules/user/dto/user.change.password.request.dto.ts
@@ -1,11 +1,14 @@
 import { ApiProperty } from '@nestjs/swagger';
-import { IsNotEmpty, IsString, IsUUID, Matches, MinLength } from 'class-validator';
+import { IsNotEmpty, IsString, Matches, MinLength } from 'class-validator';
 import { AppRegexp, ValidationErrorMessages } from '@/constants';
 
 export class UserChangePasswordRequestDto {
   @ApiProperty()
-  @IsUUID(undefined, { message: ValidationErrorMessages.UUID })
-  public requestId: string;
+  @IsNotEmpty({ message: ValidationErrorMessages.RequiredField })
+  @IsString()
+  @MinLength(6, { message: ValidationErrorMessages.PasswordLength })
+  @Matches(AppRegexp.Password, { message: ValidationErrorMessages.PasswordContent })
+  public oldPassword: string;
 
   @ApiProperty()
   @IsNotEmpty({ message: ValidationErrorMessages.RequiredField })
