# server/swagger.openapi3.json
@@ -122,7 +122,45 @@
             "description": "Unauthorized"
           },
           "404": {
-            "description": "User not found"
+            "description": ""
+          }
+        },
+        "tags": [
+          "user"
+        ]
+      },
+      "patch": {
+        "operationId": "UserController_updateCurrentUser",
+        "parameters": [],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/UserCurrentUpdateRequestDto"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/UserResponseDto"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": ""
+          },
+          "403": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": ""
           }
         },
         "tags": [
@@ -158,7 +196,7 @@
             "description": "Unauthorized"
           },
           "404": {
-            "description": "User not found"
+            "description": ""
           }
         },
         "tags": [
@@ -220,13 +258,13 @@
         ],
         "responses": {
           "200": {
-            "description": "Logout was succeed"
+            "description": ""
           },
           "403": {
             "description": "Unauthorized"
           },
           "404": {
-            "description": "User not found"
+            "description": ""
           }
         },
         "tags": [
@@ -270,6 +308,39 @@
         ]
       }
     },
+    "/api/user/new-password": {
+      "patch": {
+        "operationId": "UserController_newPassword",
+        "parameters": [],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/UserNewPasswordRequestDto"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": ""
+          },
+          "400": {
+            "description": ""
+          },
+          "403": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": ""
+          }
+        },
+        "tags": [
+          "user"
+        ]
+      }
+    },
     "/api/user/change-password": {
       "patch": {
         "operationId": "UserController_changePassword",
@@ -293,9 +364,6 @@
           },
           "403": {
             "description": "Unauthorized"
-          },
-          "404": {
-            "description": ""
           }
         },
         "tags": [
@@ -486,9 +554,6 @@
           "lastName": {
             "type": "string"
           },
-          "nickname": {
-            "type": "string"
-          },
           "isConfirmed": {
             "type": "boolean"
           },
@@ -553,6 +618,32 @@
           "confirmPassword"
         ]
       },
+      "UserCurrentUpdateRequestDto": {
+        "type": "object",
+        "properties": {
+          "firstName": {
+            "type": "string"
+          },
+          "middleName": {
+            "type": "string"
+          },
+          "lastName": {
+            "type": "string"
+          },
+          "phone": {
+            "type": "string"
+          },
+          "aboutYourself": {
+            "type": "string"
+          },
+          "favoriteSoft": {
+            "type": "array",
+            "items": {
+              "type": "string"
+            }
+          }
+        }
+      },
       "UserResetPasswordRequestDto": {
         "type": "object",
         "properties": {
@@ -564,7 +655,7 @@
           "email"
         ]
       },
-      "UserChangePasswordRequestDto": {
+      "UserNewPasswordRequestDto": {
         "type": "object",
         "properties": {
           "requestId": {
@@ -583,6 +674,25 @@
           "confirmPassword"
         ]
       },
+      "UserChangePasswordRequestDto": {
+        "type": "object",
+        "properties": {
+          "oldPassword": {
+            "type": "string"
+          },
+          "password": {
+            "type": "string"
+          },
+          "confirmPassword": {
+            "type": "string"
+          }
+        },
+        "required": [
+          "oldPassword",
+          "password",
+          "confirmPassword"
+        ]
+      },
       "UserUpdateRequestDto": {
         "type": "object",
         "properties": {
@@ -593,9 +703,6 @@
             "type": "string"
           },
           "lastName": {
-            "type": "string"
-          },
-          "nickname": {
             "type": "string"
           }
         }
